--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 authors = ["aleonardi <alexandre.leonardi@cyris.onmicrosoft.com>"]
 
 [dependencies]
-rocket = "0.3.6"
-rocket_codegen = "0.3.6"
-
-
+clap = "2.32.0"
+regex = "1"
+rand = "0.6"
